# ChineseIME-mod-fork

./: .factorypath  .gitignore  ChineseIME_CodeReview.md  PROGRESS.md  README.md  build.gradle.kts  check_dll_exports.py  check_exports.py  compile.bat  debug_log.txt  deploy.bat  dev-guide.txt  gradle.properties  gradlew  grok_idea.md  native.cpp  opencode.json  session-ses_24bb.md  session-ses_255c.md  settings.gradle.kts  test_dll.cpp  tsf_listen.txt  verify_ime_sync.py
.github/workflows/: build.yml  linux-build.yml  main.yml  windows-build.yml
.qwen/: settings.json  settings.json.orig
docs/: AGENTS.md  ChineseIME_CodeReview.md  IME_Detection_Debug.md  PROGRESS.md  Quick-Cangjie_HUD.md  Windows_IME_Event_Driven_HUD.md  dev-guide.txt  grok_idea.md  mod_debug_idea.txt  tsf_listen.txt
documents/: AGENTS.md  IME_Detection_Debug.md  PROGRESS.md  Windows_IME_Event_Driven_HUD.md  grok_idea.md  mod_debug_idea.txt
native/: CMakeLists.txt  CMakePresets.json  build.bat  build_simple.bat
native/src/: active_ime_bridge.h  active_ime_bridge_backup.cpp  candidate_cache.cpp  common.h  ime_bridge.cpp  ime_bridge.h  ime_bridge_simple.cpp  ime_bridge_simple.cpp.bak  ime_callback.h  ime_detector.cpp  ime_detector.h  ime_state_manager.cpp  ime_state_manager.h  imm32_monitor.cpp  imm32_monitor.h  jni_callback.cpp  jni_callback.h  sta_thread.cpp  sta_thread.h  tsf_monitor.cpp  tsf_monitor.h  tsf_sink.cpp  tsf_sink.h  tsf_sink_backup.cpp  win_event_bridge.cpp  win_event_bridge.h
src/: dll.c
temp_jar_check/: chineseime-refmap.json  chineseime.mixins.json  fabric.mod.json
(+30 files in other folders)
